--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="imgBx">
                     <img src="02.jpg" alt="">
                 </div>
-                <h2>Ariel Haidar Razan<br><span>Pelajar</span></h2>
+                <h2>Ariel Haidar Razan<br><span>MAHASISWA</span></h2>
             </div>
 
             <div class="contactInfo">
@@ -57,23 +57,8 @@
                         <h4>SMA Negeri 2 Lamongan</h4>
                     </li>
                     <li>
-                        <h5>2017</h5>
-                        <h4>Basic Photoshop</h4>
-                        <h4>Sekolah Desain</h4>
-                    </li>
-                    <li>
-                        <h5>2018</h5>
-                        <h4>Logo Desain</h4>
-                        <h4>Sekolah Desain</h4>
-                    </li>
-                    <li>
-                        <h5>2019</h5>
-                        <h4>Vector Desain</h4>
-                        <h4>Sekolah Desain</h4>
-                    </li>
-                    <li>
                         <h5>2020</h5>
-                        <h4>Basic Adobe Illustrator</h4>
+                        <h4>Basic Photoshop</h4>
                         <h4>Sekolah Desain</h4>
                     </li>
                     <li>
@@ -97,7 +82,7 @@
                     <li>
                         <span class="text">Javanese</span>
                         <span class="percent">
-                            <div style="width: 90%;"></div>
+                            <div style="width: 70%;"></div>
                         </span>
                     </li>
                     <li>
@@ -109,7 +94,7 @@
                     <li>
                         <span class="text">Japanese</span>
                         <span class="percent">
-                            <div style="width: 40%;"></div>
+                            <div style="width: 20%;"></div>
                         </span>
                     </li>
                 </ul>
@@ -118,28 +103,11 @@
         <div class="right_Side">
             <div class="about">
                 <h2 class="title2">Profile</h2>
-                <p>Nama Ariel Haidar Razan, umur 17, lahir di Lamongan dan sekarang
-                bersekolah di SMA Negeri 2 Lamongan. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ornare lacinia leo, et condimentum urna ornare non. Nunc quis dignissim augue. Sed quis gravida nulla. Maecenas nulla purus, semper ac dui id, venenatis maximus ipsum. Nam luctus enim nec nisl condimentum, quis rhoncus dolor pharetra. Aenean sit amet nisl tempus, accumsan risus nec, suscipit dui. Praesent fringilla felis id sapien vehicula condimentum. Suspendisse tempor, ligula ut feugiat sollicitudin, metus lorem porta ligula, et posuere purus erat quis ligula. Nunc nec leo finibus, viverra enim a, rutrum augue. Duis cursus dolor quis ex cursus sagittis.
-
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Donec molestie sapien quis dolor venenatis dapibus. Aenean auctor dolor sed ligula porta, eget rutrum quam euismod. Nam sagittis nulla mauris, aliquet fermentum massa aliquet eget. In aliquam vulputate neque, in iaculis ligula cursus ac. Duis malesuada orci et ante posuere, quis pulvinar purus tristique. Vestibulum pharetra metus ligula, eget semper elit imperdiet sed. Donec nec tortor ac dui placerat tincidunt at at libero. Sed consequat nulla magna, vel porttitor nibh bibendum sit amet. Sed sed tellus dolor.</p>
+                <p>Saya Ariel Haidar Razan, biasa dipanggil Haidar. Lahir di Lamongan pada tanggal 29 Agustus 2005, dan saya dulu bersekolah di SMA Negeri 2 Lamongan.
+                    Sekarang saya berkuliah di Universitas International Semen Indonesia, Jurusan Desain Komunikasi Visual.
+                </p>
             </div>
             <div class="about">
-                <h2 class="title2">Experience</h2>
-                <div class="box">
-                    <div class="year_company">
-                        <h5>2018 - Present</h5>
-                        <h5>Freelance</h5>
-                    </div>
-                    <div class="text">
-                        <h4>Designer Graphic</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Morbi commodo libero eu neque faucibus, ut scelerisque erat congue. 
-                            Vivamus vehicula, felis a auctor egestas, dolor lorem tristique justo, nec ornare est dolor in erat. 
-                            Mauris bibendum volutpat arcu non auctor. Aenean at velit eleifend elit posuere interdum vel eu tellus.</p>
-                    </div>
-                </div>
-            </div>
-
             <div class="about skills">
                 <h2 class="title2">Professional Skills</h2>
                 <div class="box">
